--- a/lang/ar.json
+++ b/lang/ar.json
@@ -1,5 +1,4 @@
 {
-    "": "",
     "(and :count more error)": "(و :count خطأ إضافي)",
     "(and :count more errors)": "(و :count أخطاء إضافية)",
     "A new verification link has been sent to the email address you provided during registration.": "تم إرسال رابط تحقق جديد إلى عنوان البريد الإلكتروني الذي قمت بالتسجيل به.",
@@ -245,15 +244,20 @@
     "Whoops!": "عذراً!",
     "Yes": "نعم",
     "You are receiving this email because we received a password reset request for your account.": "لقد استلمت هذا الإيميل لأننا استقبلنا طلباً لاستعادة كلمة مرور حسابك.",
+    "Your email address is unverified.": "لم يتم التحقق من عنوان بريدك الإلكتروني.",
     "You're logged in!": "لقد قمت بتسجيل الدخول!",
     "Stored Successfully": "تم الحفظ بنجاح",
     "Updated Successfully": "تم التحديث بنجاح",
     "Deleted Successfully": "تم التحديث بنجاح",
     "Are you sure?": "هل أنت متأكد؟",
+    "Bio": "نبذة مختصرة",
+    "CV Link": "رابط السيرة الذاتية",
     "Blog": "مدونة",
     "Book": "كتاب",
     "Article": "مقالة",
     "Course": "دورة تدريبية",
     "Other": "أخرى",
-    "Your email address is unverified.": "لم يتم التحقق من عنوان بريدك الإلكتروني."
+    "Search Page": "صفحة البحث",
+    "There is no results.": "لا توجد نتائج.",
+    "":""
 }
