--- a/lang/ar.json
+++ b/lang/ar.json
@@ -243,6 +243,7 @@
     "Web Server is Down": "خادم الويب متوقف",
     "Whoops!": "عذراً!",
     "Yes": "نعم",
+    "Follows": "المتابعات",
     "You are receiving this email because we received a password reset request for your account.": "لقد استلمت هذا الإيميل لأننا استقبلنا طلباً لاستعادة كلمة مرور حسابك.",
     "Your email address is unverified.": "لم يتم التحقق من عنوان بريدك الإلكتروني.",
     "You're logged in!": "لقد قمت بتسجيل الدخول!",
@@ -259,8 +260,11 @@
     "Other": "أخرى",
     "Search Page": "صفحة البحث",
     "Main Info": "المعلومات الأساسية",
-    "User Photos": "الصور",
-    "User Works": "الأعمال",
+    "User Photos": "صور المستخدم",
+    "User Works": "أعمال المستخدم",
+    "Users": "المستخدمين",
     "There is no results.": "لا توجد نتائج.",
+    "Followed Works": "أعمال مستخدمين تتابعهم",
+    "Followed Images": "صور مستخدمين تتابعهم",
     "":""
 }
