feat: ( like feature )

--- a/lang/ar.json
+++ b/lang/ar.json
@@ -103,6 +103,8 @@
     "language changed successfully.": "تم تغيير اللغة بنجاح.",
     "Length Required": "المدة المطلوبة",
     "Like": "إعجاب",
+    "Not Like": "عدم إعجاب",
+    "Likes": "الإعجابات",
     "Load": "تحميل",
     "Localize": "اللغة",
     "Locked": "مقفل",
@@ -260,7 +262,8 @@
     "Other": "أخرى",
     "Search Page": "صفحة البحث",
     "Main Info": "المعلومات الأساسية",
-    "User Photos": "صور المستخدم",
+    "Your Page": "صفحتك الشخصية",
+    "User Images": "صور المستخدم",
     "User Works": "أعمال المستخدم",
     "Users": "المستخدمين",
     "There is no results.": "لا توجد نتائج.",
